# mlflow_llmops

./: .env.template  .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
ch3/: .env.template  README.md  pyproject.toml
ch3/agents/langgraph/: agent.py
ch3/cli/: main.py
ch4/: README.md  pyproject.toml
ch4/cli/: main.py
ch4/scripts/: web_ingest.py
ch5/: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
ch5/evaluation/: 01_vibe_check.py  02_standard_scorers.py  03_custom_scorers.py  04_register_scorers.py  05_run_evaluation.py  06_conversation_sim.py  __init__.py  scorers.py
ch6/: .env.template  .gitignore  Makefile  README.md  pyproject.toml
ch6/data/: eval_dataset.py
ch6/prompts/: 01_register_prompt.py  02_version_update.py  03_alias_management.py  04_evaluate_prompt.py  04_tags_metadata.py  05_model_config.py  05_optimize_metaprompt.py  06_optimize_gepa.py  06_structured_output.py  07_deploy_lifecycle.py  07_evaluate_prompt.py  08_model_config.py  08_optimize_prompt.py  09_register_system_prompt.py  09_structured_output.py
ch7/: .env.template  .gitignore  Makefile  README.md  pyproject.toml
ch7/agents/langgraph/: agent.py
ch7/agents/langgraph/tools/: doc_search.py
ch7/deploy/: Dockerfile
ch7/deploy/k8s/: deployment.yaml  service.yaml
ch7/gateway/: gateway_ab_test.yaml  gateway_config.yaml
ch7/scripts/: web_ingest.py
ch7/serving/: __init__.py  agent.py  eval_serving.py  log_model.py  model_code.py  start_server.py
ch8/: .env.template  .gitignore  Makefile  README.md  __init__.py  chapter8_code_samples.py  chapter8_quickstart.py  chapter8_samples.py  pyproject.toml
ch8/01_production_tracing/: basic_setup.py  graceful_shutdown.py  metadata_tagging.py  sampling_strategies.py
ch8/02_cost_tracking/: cost_analysis.sql  cost_calculator.py  token_tracking.py
ch8/03_quality_monitoring/: backfill_scorers.py  feedback_collection.py  scorer_lifecycle.py  scorer_setup.py
ch8/04_alerting/: notification_handlers.py  rollback.py
ch8/05_opentelemetry/: otel-collector-config.yaml  otlp_setup.py
ch8/agents/langgraph/tools/: doc_search.py
ch8/monitoring/: 01_tracing_setup.py  02_token_and_cost.py  03_feedback.py  04_evaluation.py  05_otel_export.py  cost_calculator.py
ch9/: 9.1.ipynb  9.1.py  9.2.ipynb  9.2.py  9.3.ipynb  9.3.py  README.md
