[project]
name = "ch8-monitoring"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlflow[databricks]>=3.1",
    "openai>=1.0",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "langchain-milvus>=0.2",
    "exa-py>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "python-dotenv>=1.0",
]
